--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -1,10 +1,9 @@
 .social-login
-    button
-        span.social-login__github
-            i.fab.fa-github
-        | Continue With Github
-    button.social-login__facebook
+    button.social-login--github
         span
-            i.fab.fa-facebook
-        | Continue With Facebook
-    
+            i.fab.fa-github 
+        |Continue with Github
+    button.social-login--facebook
+        span
+            i.fab.fa-facebook 
+        |Continue with Facebook
