--- a/views/userDetail.pug
+++ b/views/userDetail.pug
@@ -12,11 +12,12 @@ block content
                     button ✏️ Edit Profile
                 a(href=`/users${routes.changePassword}`)
                     button 🔒 Change Password
-        .uploaded-videos
-            each item in user.videos
-                +videoBlock({
-                    id:item.id,
-                    title:item.title,
-                    views:item.views,
-                    videoFile:item.fileUrl
-                })
+        if user.videos
+            .uploaded-videos
+                each item in user.videos
+                    +videoBlock({
+                        id:item.id,
+                        title:item.title,
+                        views:item.views,
+                        videoFile:item.fileUrl
+                    })
