--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -15,8 +15,8 @@ block content
             else 
                 span.video__views #{video.views} views
             .video__author
-                |Uploaded By
-                a(href=routes.userDetaill(1))=video.creator.name
+                |Uploaded By 
+                a(href=routes.userDetail(1))=video.creator.name
         .video__comments
             if video.comments.length === 1
                 span.video__comment-number 1 comment
