--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -4,7 +4,7 @@ include mixins/videoPlayer
 block content
     .video-detail__container
         +videoPlayer({
-            src: video.fileUrl
+            src:video.fileUrl
         })
         .video__info
             if loggedUser && video.creator.id === loggedUser.id
@@ -17,10 +17,18 @@ block content
             else 
                 span.video__views #{video.views} views
             .video__author
-                |Uploaded By 
-                a(href=routes.userDetail(1))=video.creator.name
+                |Uploaded by 
+                a(href=routes.userDetail(video.creator.id))=video.creator.name
         .video__comments
             if video.comments.length === 1
-                span.video__comment-number 1 comment
+                span.video__comment-number#jsCommentNumber 1
+                |  comment
             else
-                span.video__comment-number #{video.comments.length} comments
+                span.video__comment-number#jsCommentNumber=video.comments.length
+                |  comments
+            form.add__comment#jsAddComment
+                input(type="text", placeholder="Add a comment")
+            ul.video__comments-list#jsCommentList
+                each comment in video.comments.reverse()
+                    li
+                        span=comment.text
